--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 
     implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.3'
 
+    implementation 'com.google.android.gms:play-services-ads:20.5.0'
+
     //Firebase Auth UI
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 
